<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheapCast</string>
    <string name="cheapcast">CheapCast</string>
    <string name="action_settings">Settings</string>
    <string name="start_on_boot">Start CheapCast on boot</string>
    <string name="start_on_boot_summary">Start the service right after the device boots up</string>
    <string name="analytics">Analytics</string>
    <string name="analytics_summary_off">Send anonymous usage &amp; error data to Google Analytics</string>
    <string name="analytics_summary_on">Don\'t send anonymous usage &amp; error data to Google Analytics</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Keep the Development of CheapCast running. Donate to my BeerFund</string>
    <string name="about">About</string>
    <string name="donations__button_close">Close</string>
    <string name="donations__flattr">Flattr</string>
    <string name="donations__description">Do you find this application useful?\nSupport it\'s development by sending a donation to the developer!</string>
    <string name="donations__flattr_description">Flattr takes 10 % as a monthly fee!</string>
    <string name="donations__paypal">PayPal</string>
    <string name="donations__paypal_description">You can choose how much you want to donate after clicking the button!</string>
    <string name="donations__thanks_dialog_title">Thanks!</string>
    <string name="donations__thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
    <string name="donations__alert_dialog_title">Error occurred</string>
    <string name="donations__alert_dialog_no_browser">No browser was found to open a website!</string>
    <string name="donations__donate_button">Donate!</string>
    <string-array name="about_tabs">
        <item>About</item>
        <item>Changelog</item>
        <item>3rd Party Libraries</item>
    </string-array>
    <string name="about_license">(c) 2013 CheapCast\nby Sebastian Mauer\nAll Rights reserved.\n\nLicensed under the terms\nof the Apache 2.0 License\n\nAndroid, Chrome and ChromeCast are trademarks of Google Inc.\nThis app is not endorsed and/or supported by Google Inc.</string>
    <string name="donation_paypal_item">Donation for CheapCast</string>
    <string name="device_friendly_name">Friendly name</string>
    <string name="device_friendly_name_summary">This is how your device will show up in ChromeCast-enabled apps.</string>
    <string name="ga_trackingId">UA-374323-18</string>
    <string name="stop_service">Stop Service</string>
    <string name="restart_service">Restart Service</string>
    <string name="start_service">Start Service</string>
    <string name="custom_services">Custom Services</string>
    <string name="follow_me_on_gplus">Follow me on Google+</string>
    <string name="custom_services_summary">DEV Only. Allow registration of custom apps with CheapCast</string>

    <!-- donation related -->
    <string name="donate">Donate</string>
    <string name="donate_summary">Using secure Google Play Store in-app payment.</string>

    <string name="ui_dialog_donate_message">Please specify amount:</string>
    <string name="ui_donation_success_message">Donation successful, thank you!</string>
    <string name="ui_donation_failure_message">Donation failed: %1$s</string>

    <!-- purchase errors -->
    <string name="donation_error_iab_unavailable">In-app billing is not available</string>
    <string name="donation_error_unavailable">not available</string>
    <string name="donation_error_canceled">canceled</string>
    <string name="donation_error_already_owned">you have already donated</string>
</resources>